--- a/css/Movie_application.css
+++ b/css/Movie_application.css
@@ -1,7 +1,15 @@
 *{margin: 0;padding: 0}
-body{box-sizing: border-box}
+body{box-sizing: border-box;}
 
-section{
-    width: 80vw;
-    max-width: 420px
+img{
+    height: 140px;
+    background-size: unset;
+    width: 220px;
 }
+
+#mainContainer{
+    border-radius: 10px;
+    filter:  drop-shadow(0px 20px 10px rgba(0, 0, 0, 0.59));
+}
+
+
